crates/zefiro/src/shell/snapshots/zefiro__shell__presentation__tests__every_repo_theme_derives_its_own_palette@wafer.snap
---
source: crates/zefiro/src/shell/presentation.rs
assertion_line: 85
expression: colors
---
Colors {
    background: Rgb(
        [
            242,
            242,
            242,
        ],
    ),
    window_background: Rgb(
        [
            237,
            237,
            237,
        ],
    ),
    foreground: Rgb(
        [
            32,
            32,
            32,
        ],
    ),
    accent: Rgb(
        [
            74,
            144,
            217,
        ],
    ),
    favorite: Rgb(
        [
            69,
            90,
            112,
        ],
    ),
    selection_foreground: Rgb(
        [
            32,
            32,
            32,
        ],
    ),
    selection_background: Rgb(
        [
            183,
            183,
            183,
        ],
    ),
    highlight: Rgb(
        [
            51,
            100,
            151,
        ],
    ),
    muted_foreground: Rgb(
        [
            164,
            164,
            164,
        ],
    ),
    bar_groove: Rgb(
        [
            179,
            179,
            179,
        ],
    ),
    spectrum: [
        Rgb(
            [
                74,
                144,
                217,
            ],
        ),
        Rgb(
            [
                138,
                180,
                224,
            ],
        ),
        Rgb(
            [
                200,
                220,
                240,
            ],
        ),
    ],
}
