crates/zefiro/src/shell/snapshots/zefiro__shell__presentation__tests__every_repo_theme_derives_its_own_palette@winamp.snap
---
source: crates/zefiro/src/shell/presentation.rs
expression: colors
---
Colors {
    background: Rgb(
        [
            0,
            0,
            0,
        ],
    ),
    window_background: Rgb(
        [
            9,
            9,
            9,
        ],
    ),
    foreground: Rgb(
        [
            255,
            255,
            255,
        ],
    ),
    accent: Rgb(
        [
            0,
            255,
            0,
        ],
    ),
    favorite: Rgb(
        [
            214,
            181,
            33,
        ],
    ),
    selection_foreground: Rgb(
        [
            255,
            255,
            255,
        ],
    ),
    selection_background: Rgb(
        [
            53,
            53,
            53,
        ],
    ),
    highlight: Rgb(
        [
            0,
            255,
            0,
        ],
    ),
    muted_foreground: Rgb(
        [
            150,
            150,
            150,
        ],
    ),
    bar_groove: Rgb(
        [
            77,
            77,
            77,
        ],
    ),
    spectrum: [
        Rgb(
            [
                41,
                206,
                16,
            ],
        ),
        Rgb(
            [
                214,
                181,
                33,
            ],
        ),
        Rgb(
            [
                239,
                49,
                16,
            ],
        ),
    ],
}
